# BeamEnergyCalc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CalcEnergy  README.md  ReadMe.txt  main.cpp
include/: CreateGraph.h  EnergyCalculation.h  Isotope.h  IsotopeData.h
src/: CreateGraph.cpp  EnergyCalculation.cpp  IsotopeData.cpp
